--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,23 @@
+# Core app
 streamlit>=1.32.2
 pandas>=2.2.1
 numpy>=1.26.4
 plotly>=5.19.0
-scikit-learn>=1.4.1.post1
 requests>=2.31.0
 python-dotenv>=1.0.1
+
+# LLM / API
 openai>=1.14.0
 groq==0.5.0
+
+# ML
+scikit-learn>=1.4.1.post1
+joblib>=1.4.0
 statsmodels>=0.14.1
 prophet>=1.1.5
+
+# Database / ORM (🔥 REQUIRED FOR YOUR ERROR)
+sqlalchemy>=2.0.0
+mysql-connector-python>=8.3.0
+pymysql>=1.1.0
+psycopg2-binary>=2.9.9
